WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173455
REGRESSION: Media control glyphs appear to invert colors when video is dragged
https://bugs.webkit.org/show_bug.cgi?id=173455
Summary
REGRESSION: Media control glyphs appear to invert colors when video is dragged
Simon Fraser (smfr)
Reported
2017-06-15 20:48:19 PDT
REGRESSION: Media control glyphs appear to invert colors when video is dragged
Attachments
Patch
(7.95 KB, patch)
2017-06-15 20:51 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(7.99 KB, patch)
2017-06-15 20:51 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-06-15 20:51:02 PDT
Created
attachment 313052
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-06-15 20:51:43 PDT
Created
attachment 313053
[details]
Patch
Simon Fraser (smfr)
Comment 3
2017-06-15 20:52:04 PDT
rdar://problem/32726887
Simon Fraser (smfr)
Comment 4
2017-06-16 12:56:33 PDT
https://trac.webkit.org/changeset/218396/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug