REGRESSION: Media control glyphs appear to invert colors when video is dragged https://bugs.webkit.org/show_bug.cgi?id=173455 rdar://problem/32726887

Reviewed by Tim Horton.

Masks on composited layers were not correctly painted in drag images, because RenderLayer::paintLayerContents()
failed to pass the PaintBehaviorFlattenCompositingLayers flag down through the mask drawing code, causing
RenderBox::paintMaskImages() to fall into the composited mask code path.

Fix by making a local copy of PaintBehavior, and setting the PaintBehaviorFlattenCompositingLayers and PaintBehaviorSnapshotting
bits on it as appropriate, and passing it into paintMaskForFragments() and paintChildClippingMaskForFragments(). This is similar
to code above.

Can't test drag images.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayerContents):
(WebCore::RenderLayer::paintMaskForFragments):
(WebCore::RenderLayer::paintChildClippingMaskForFragments):
* rendering/RenderLayer.h:

Canonical link: https://commits.webkit.org/190347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218396 268f45cc-cd09-0410-ab3c-d52691b4dbfc